Finalização do Projeto

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,9 @@
 {
-  "git.enabled": false,
   "files.exclude": {
     "node_modules": true,
     ".vscode": true,
     ".gitignore": true,
-    "package-lock.json": true,
-    "public": true,
-    "yarn.lock":true
-    
+    "package.json": true,
+    "package-lock.json": true
   }
 }
